<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_stories"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?android:attr/textColorPrimary" /> <Button
    android:id="@+id/btnRamayan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/story_ram_title"
    android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnMahabharat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/story_mahabharath_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvStoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_text_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </ScrollView>
</LinearLayout>